make gradle runnable again